--- a/airbitz/airbitz/static/less/results-grid.less
+++ b/airbitz/airbitz/static/less/results-grid.less
@@ -46,6 +46,7 @@
     }
 
     .biz-description {
+        opacity: 0;
         height: 90px;
         margin: 0 0 4px;
     }
