--- a/airbitz/airbitz/static/less/results-map-list.less
+++ b/airbitz/airbitz/static/less/results-map-list.less
@@ -188,6 +188,7 @@
     }
 
     .biz-description {
+        opacity: 0;
         line-height: 18px;
 
         @media(max-width: @screen-md-min) {
